<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8CBAE8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ChildtwoActivity"
    tools:showIn="@layout/activity_childtwo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/droid_cafe_ice_cream_sandwich"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icecream_circle" />

    <TextView
        android:id="@+id/ice_cream_sandwich_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/droid_cafe_ice_cream_sandwich"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="sans"
        app:fontFamily="serif"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ice_cream_sandwich_txt"
        android:layout_width="267dp"
        android:layout_height="122dp"
        android:layout_marginTop="16dp"
        android:background="#392DDDEF"
        android:gravity="center"
        android:text="@string/ice_cream_sandwich_desc"
        android:textColor="#000000"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/select_size_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/size_select"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ice_cream_sandwich_txt" />

    <RadioGroup
        android:layout_width="280dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_size_txt"
        app:layout_constraintVertical_bias="0.09">

        <RadioButton
            android:id="@+id/rad_btn_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="IceCreamSandwichRadioButton"
            android:text="@string/normal_sz" />

        <RadioButton
            android:id="@+id/rad_btn_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="IceCreamSandwichRadioButton"
            android:text="@string/up_l" />

        <RadioButton
            android:id="@+id/rad_btn_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="IceCreamSandwichRadioButton"
            android:text="@string/up_xl" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>