<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8CBAE8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ChildthreeActivity"
    tools:showIn="@layout/activity_childthree">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="185dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/droid_cafe_frozen_yogurt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/froyo_circle" />

    <TextView
        android:id="@+id/frozen_yogurt_titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/droid_cafe_frozen_yogurt"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="sans"
        app:fontFamily="serif"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/frozen_yogurt_txt"
        android:layout_width="297dp"
        android:layout_height="139dp"
        android:layout_marginTop="16dp"
        android:background="#392DDDEF"
        android:gravity="center"
        android:text="@string/frozen_yogurt_desc"
        android:textColor="#000000"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:layout_width="286dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yogurt_select_size">

        <RadioButton
            android:id="@+id/froyo_rd_btn_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="FrozenYogurtRadioButton"
            android:text="@string/normal_yogurt" />

        <RadioButton
            android:id="@+id/froyo_rd_btn_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="FrozenYogurtRadioButton"
            android:text="@string/up_size_yogurt" />
    </RadioGroup>

    <TextView
        android:id="@+id/yogurt_select_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/extra_select"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frozen_yogurt_txt" />

</android.support.constraint.ConstraintLayout>